--- a/web_design/CSS/Posts.css
+++ b/web_design/CSS/Posts.css
@@ -1,5 +1,5 @@
-span.a {
-  display: inline-block; /* the default for span */
+.A {
+  display: inline-block;
   border-radius: 15px;
   border: 3px solid #484848;
   padding: 20px;
@@ -9,24 +9,87 @@ span.a {
   float: left;
 }
 
-span.b {
-  display: inline-block; /* the default for span */
+.B {
+  display: inline-block;
   border-radius: 15px;
   border: 3px solid #484848;
   padding: 20px;
   width: 300px;
   height: 500px;
   background: #6ad4c4;
-  float: left; 
+  float: left;
 }
 
-span.c {
-  display: inline-block; /* the default for span */
+.C {
+  display: inline-block;
   border-radius: 15px;
   border: 3px solid #484848;
   padding: 20px;
   width: 300px;
   height: 500px;
   background: #e9974f;
-  float: left; 
+  float: left;
 }
+
+.D {
+  display: inline-block;
+  border-radius: 15px;
+  border: 3px solid #484848;
+  padding: 20px;
+  width: 300px;
+  height: 500px;
+  background: #f4d34e;
+  float: left;
+}
+
+.E {
+  display: inline-block;
+  border-radius: 15px;
+  border: 3px solid #484848;
+  padding: 20px;
+  width: 300px;
+  height: 500px;
+  background: #949489;
+  float: left;
+}
+
+.F {
+  display: inline-block;
+  border-radius: 15px;
+  border: 3px solid #484848;
+  padding: 20px;
+  width: 300px;
+  height: 500px;
+  background: #dcda47;
+  float: left;
+}
+
+.space {
+	width: 175px;
+	height: 500px;
+	float: left;
+}
+
+.bigspace {
+	width: 260px;
+	height: 500px;
+	float: left;
+}
+
+ span.name {
+   color: black;
+   background-color: white;
+   text-decoration: none;
+   font-size: 30px;
+   font-weight: bold;
+   font-family: 'Garamond', sans-serif;
+   width: auto;
+   border: 2px #f4d34e;
+   margin: auto;
+ }
+ 
+ span.para {
+   color: black;
+   text-decoration: none;
+   font-size: 15px;
+   font-family: 'Garamond'
